--- a/build.gradle
+++ b/build.gradle
@@ -2,6 +2,8 @@ plugins {
     id 'scala'
 
     id 'java-library'
+
+    id 'maven'
 }
 
 repositories {
@@ -26,7 +28,7 @@ def scalaTestVersion = "3.0.8"
 dependencies {
     implementation "org.scala-lang:scala-library:${scalaVersion}"
 
-    implementation group: 'com.graphhopper', name: 'jsprit-core', version: '1.9.0-beta.3'
+    implementation group: 'com.graphhopper', name: 'jsprit-core', version: '1.9.0-beta.4'
     implementation "org.slf4j:slf4j-api:${slf4jVersion}"
     implementation "ch.qos.logback:logback-classic:1.2.3"
     implementation "com.typesafe.scala-logging:scala-logging_${scalaBinaryVersion}:3.9.0"
