--- a/build.gradle
+++ b/build.gradle
@@ -3,7 +3,7 @@ plugins {
 
     id 'java-library'
 
-    id 'maven'
+    id 'maven-publish'
 }
 
 repositories {
@@ -13,7 +13,7 @@ repositories {
 compileScala.options.encoding = 'UTF-8'
 
 
-group = 'beam'
+group = 'com.github.LBNL-UCB-STI'
 version = '0.5.0'
 
 configurations{
@@ -22,24 +22,34 @@ configurations{
 
 def scalaBinaryVersion = "2.12"
 def scalaVersion = "2.12.12"
-def slf4jVersion = "1.7.25"
 def scalaTestVersion = "3.0.8"
 
 dependencies {
     implementation "org.scala-lang:scala-library:${scalaVersion}"
 
     implementation group: 'com.graphhopper', name: 'jsprit-core', version: '1.9.0-beta.4'
-    implementation "org.slf4j:slf4j-api:${slf4jVersion}"
-    implementation "ch.qos.logback:logback-classic:1.2.3"
-    implementation "com.typesafe.scala-logging:scala-logging_${scalaBinaryVersion}:3.9.0"
 
     testImplementation group: 'org.scalatest', name: "scalatest_${scalaBinaryVersion}", version: scalaTestVersion
 }
 
+task sourcesJar(type: Jar, dependsOn: classes) {
+    archiveClassifier.set("sources")
+    from sourceSets.main.allSource
+}
+
+task javadocJar(type: Jar, dependsOn: javadoc) {
+    archiveClassifier.set("javadoc")
+    from javadoc.destinationDir
+}
 
 tasks.named('jar') {
     manifest {
         attributes('Implementation-Title': project.name,
                 'Implementation-Version': project.version)
     }
+}
+
+artifacts {
+    archives sourcesJar
+    archives javadocJar
 }
