--- a/build.gradle
+++ b/build.gradle
@@ -14,7 +14,7 @@ compileScala.options.encoding = 'UTF-8'
 
 
 group = 'com.github.LBNL-UCB-STI'
-version = '0.5.0'
+version = 'v0.5.0'
 
 configurations{
     scalaCompilerPlugin
@@ -32,14 +32,8 @@ dependencies {
     testImplementation group: 'org.scalatest', name: "scalatest_${scalaBinaryVersion}", version: scalaTestVersion
 }
 
-task sourcesJar(type: Jar, dependsOn: classes) {
-    archiveClassifier.set("sources")
-    from sourceSets.main.allSource
-}
-
-task javadocJar(type: Jar, dependsOn: javadoc) {
-    archiveClassifier.set("javadoc")
-    from javadoc.destinationDir
+java {
+    withSourcesJar()
 }
 
 tasks.named('jar') {
@@ -49,7 +43,28 @@ tasks.named('jar') {
     }
 }
 
-artifacts {
-    archives sourcesJar
-    archives javadocJar
+publishing {
+    publications {
+        mavenJava(MavenPublication) {
+            from components.java
+            pom {
+                name = 'JSprit Wrapper'
+                description = 'JSprit Wrapper that simplifies solving certain problems with JSprit'
+                url = 'https://github.com/LBNL-UCB-STI/jsprit-wrapper'
+                scm {
+                    connection = 'scm:git:git@github.com:LBNL-UCB-STI/jsprit-wrapper.git'
+                    developerConnection = 'scm:git:git@github.com:LBNL-UCB-STI/jsprit-wrapper.git'
+                    url = 'https://github.com/LBNL-UCB-STI/jsprit-wrapper'
+                }
+            }
+        }
+    }
+    repositories {
+        maven {
+            // change URLs to point to your repos, e.g. http://my.org/repo
+            def releasesRepoUrl = layout.buildDirectory.dir('repos/releases')
+            def snapshotsRepoUrl = layout.buildDirectory.dir('repos/snapshots')
+            url = version.endsWith('SNAPSHOT') ? snapshotsRepoUrl : releasesRepoUrl
+        }
+    }
 }
